--- a/pagina.html
+++ b/pagina.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="css/fortnite.css">
+    <link rel="stylesheet" href="./css/fortnite.css">
 </head>
 
 <body>
